# financial-modelling

./: .gitignore  README.md  pyproject.toml
financial_modelling.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
financial_modelling/notebooks/: 0.1-dt-analyse-msft.ipynb  0.3-dt-insert-data-into-postres.ipynb  0.4.-dt-generate-shemas.ipynb  0.5.-dt-analyse-copyfrom-error.ipynb
financial_modelling/schemas/: dim_profiles.sql  dim_symbol.sql  fact_prices.sql
financial_modelling/src/data/: FinancialModellingPrep_Symbols_20200212222842.json  get_data.py  get_financial_data.py
financial_modelling/src/data/FinancialDataRetriever/: FinancialDataRetriever.py  FinancialModellingPrep.py  IexCloudApi.py  YahooFinanceCrawler.py  __init__.py  __main__.py
financial_modelling/src/data/StoreData/: StoreDataPostgres.py  __init__.py  __main__.py
tests/: test_financial_modelling.py  test_financial_modelling_prep.py  test_iex_cloud_api.py  test_yahoo_finance_crawler.py
