[tool.poetry]
name = "financial-modelling"
version = "0.1.0"
description = ""
authors = ["dev-tran <dt5513@outlook.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
pandas = "^1.0.1"
tqdm = "^4.42.1"
jupyterlab = "^1.2.6"
toml = "^0.10.0"
requests = "^2.22.0"
plotly = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
pylint = "^2.4.4"
black = "^19.10b0"

[tool.black]
line-length = 80
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
